fixed z-index

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,4 +1,5 @@
 .header {
+    z-index: 1;
     top:20px;
     position: fixed;
     background: rgb(4, 12, 32);
