--- a/src/sass/_projects.scss
+++ b/src/sass/_projects.scss
@@ -34,7 +34,6 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    z-index: 1;
   }
   
   .slider .prev {
